fix: Fix contrast errors, increase font weight
Fixed color contrast errors reported by WAVE web accessibility tool.

Original-Commit:

https://gitlab.com/manid2/manid2.gitlab.io/-/commit/55eafe956c2cdb8111cc691aa09343347b5d06e2

--- a/assets/styles/_buttons.scss
+++ b/assets/styles/_buttons.scss
@@ -62,7 +62,7 @@ a.button {
     background: none;
 
     @include themed() {
-      color: t($text);
+      color: t($text-brighter);
     }
   }
 
