--- a/assets/styles/_themes.scss
+++ b/assets/styles/_themes.scss
@@ -12,11 +12,8 @@ $background-brighter: "background-brighter";
 $background-grey: "background-grey";
 
 $code-text: "code-text";
-$code-text-links: "code-text-links";
 $code-background: "code-background";
 
-$blockquote-text: "blockquote-text";
-$blockquote-text-links: "blockquote-text-links";
 $blockquote-background: "blockquote-background";
 
 $button-text: "button-text";
@@ -31,17 +28,16 @@ $themes: (
     $text-links: $text-links--light,
 
     $text-accent: scale-color($accent--light, $lightness: 30%),
-    $text-brighter: scale-color($text--light, $lightness: 20%),
-    $text-duller: scale-color($text--light, $lightness: -20%),
+    $text-brighter:
+      scale-color($text--light, $saturation: 40%, $lightness: 20%),
+    $text-duller:
+      scale-color($text--light, $saturation: -90%, $lightness: -10%),
     $background-brighter: scale-color($background--light, $lightness: -5%),
     $background-grey:
-      scale-color($accent--light, $saturation: -90%, $lightness: 85%),
-    $code-text: scale-color($text--light, $lightness: 40%),
-    $code-text-links: scale-color($text-links--light, $lightness: -10%),
-    $code-background: scale-color($background--light, $lightness: 40%),
-    $blockquote-text: darken($text--light, 5%),
-    $blockquote-text-links: darken($text-links--light, 5%),
-    $blockquote-background: darken($background--light, 5%),
+      scale-color($accent--light, $saturation: -80%, $lightness: 90%),
+    $code-text: scale-color($accent--light, $hue: -90%, $lightness: -45%),
+    $code-background: scale-color($background--light, $lightness: 60%),
+    $blockquote-background: darken($background--light, 2%),
     $button-text: darken($text--light, 5%),
     $button-background: darken($background--light, 5%),
   ),
@@ -51,17 +47,16 @@ $themes: (
     $text: $text--dark,
     $text-links: $text-links--dark,
 
-    $text-accent: scale-color($accent--dark, $lightness: 30%),
-    $text-brighter: scale-color($text--dark, $lightness: 20%),
-    $text-duller: scale-color($text--dark, $lightness: -20%),
+    $text-accent: scale-color($accent--dark, $lightness: 60%),
+    $text-brighter:
+      scale-color($text--dark, $saturation: 60%, $lightness: 60%),
+    $text-duller:
+      scale-color($text--dark, $saturation: -90%, $lightness: -20%),
     $background-brighter: scale-color($background--dark, $lightness: 20%),
     $background-grey:
       scale-color($accent--dark, $saturation: -90%, $lightness: -70%),
-    $code-text: scale-color($text--dark, $lightness: 60%),
-    $code-text-links: scale-color($text-links--dark, $lightness: 20%),
-    $code-background: scale-color($accent--dark, $lightness: -40%),
-    $blockquote-text: lighten($text--dark, 5%),
-    $blockquote-text-links: lighten($text-links--dark, 5%),
+    $code-text: scale-color($accent--dark, $hue: -90%, $lightness: 45%),
+    $code-background: scale-color($background--dark, $lightness: 20%),
     $blockquote-background: lighten($background--dark, 5%),
     $button-text: lighten($text--dark, 10%),
     $button-background: lighten($background--dark, 15%),
